# quote-ledger

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: epic.md  task.md
.github/workflows/: ci.yml
docs/: api-versioning.md  client-migration-checklist.md  database-migrations.md  ops-runbook.md
docs/planning/issues/: a-01.md  a-02.md  a-03.md  a-04.md
docs/prometheus/: alerts.example.yml
migrations/: 001_initial.sql
proto/quote_ledger/v1/: quote_ledger.proto
scripts/: backup_sqlite.sh  bootstrap_github.sh  restore_sqlite.sh
src/: auth.rs  config.rs  error.rs  grpc_interceptor.rs  ledger.rs  lib.rs  main.rs  mapping.rs  sqlite.rs  store.rs
src/domain/: error.rs  mod.rs  model.rs
tests/: append_subscribe.rs  auth_hardening.rs  concurrency_faults.rs  config_strict.rs  grpc_rate_limit.rs  grpc_smoke.rs  idempotency_conflict.rs  pricing_flow.rs  reliability_limits.rs  soak_concurrent.rs
